[gd_scene load_steps=20 format=3 uid="uid://crhi7te13gxj5"]

[ext_resource type="Script" uid="uid://7hluqaku3wkr" path="res://Player/player.gd" id="1_onrkg"]
[ext_resource type="Resource" uid="uid://c4u3hnish2u04" path="res://Inventory/playerInventory.tres" id="2_btcbx"]
[ext_resource type="Texture2D" uid="uid://dk50adqinjofu" path="res://Art/Ninja Adventure - Asset Pack/Ninja Adventure - Asset Pack/Actor/Characters/Knight/player_sprites.png.png" id="2_i3pqv"]
[ext_resource type="Script" uid="uid://cqtuewl6kp705" path="res://Player/weapons.gd" id="4_k53q1"]
[ext_resource type="AudioStream" uid="uid://c60s6xgy5kqq3" path="res://sword-sound-2-36274.mp3" id="5_fhl08"]
[ext_resource type="PackedScene" uid="uid://cio8y2000rvvm" path="res://sword.tscn" id="5_vtle1"]

[sub_resource type="Animation" id="Animation_onrkg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../weapons/sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-3.89383]
}

[sub_resource type="Animation" id="Animation_hqtel"]
resource_name = "walkDown"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_sweqy"]
resource_name = "walkLeft"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_2hs0m"]
resource_name = "walkRight"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_i3pqv"]
resource_name = "walkUp"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3)]
}

[sub_resource type="Animation" id="Animation_od3ui"]
resource_name = "attackDown"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../weapons/sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.180493),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-3.89383, -2.30034]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_fhl08"]
resource_name = "attackLeft"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../weapons/sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.179978),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.06116, -2.47662]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_vtle1"]
resource_name = "attackRight"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../weapons/sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.179721),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-5.13301, -4.24813]
}

[sub_resource type="Animation" id="Animation_00tjw"]
resource_name = "attackUp"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../weapons/sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.180236),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.06116, 0.884882]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sweqy"]
_data = {
&"RESET": SubResource("Animation_onrkg"),
&"attackDown": SubResource("Animation_od3ui"),
&"attackLeft": SubResource("Animation_fhl08"),
&"attackRight": SubResource("Animation_vtle1"),
&"attackUp": SubResource("Animation_00tjw"),
&"walkDown": SubResource("Animation_hqtel"),
&"walkLeft": SubResource("Animation_sweqy"),
&"walkRight": SubResource("Animation_2hs0m"),
&"walkUp": SubResource("Animation_i3pqv")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ntmi"]
radius = 7.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_btcbx"]
radius = 7.0
height = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_btcbx"]
radius = 14.0

[node name="Player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
texture_filter = 1
script = ExtResource("1_onrkg")
inventory = ExtResource("2_btcbx")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_i3pqv")
hframes = 4
vframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_sweqy")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_4ntmi")

[node name="HurtBox" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
visible = false
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_btcbx")

[node name="Direction" type="Marker2D" parent="."]

[node name="ActionableFinder" type="Area2D" parent="Direction"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/ActionableFinder"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_btcbx")

[node name="weapons" type="Node2D" parent="."]
script = ExtResource("4_k53q1")

[node name="sword" parent="weapons" instance=ExtResource("5_vtle1")]
position = Vector2(5, -2)
rotation = -3.89383

[node name="SwordSlash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_fhl08")

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
